add report Lab03

--- a/.project
+++ b/.project
@@ -41,5 +41,15 @@
 			<type>1</type>
 			<location>C:/Users/Admin/OneDrive/Máy tính/710808-IT4490-20211-ChieuT3-Chan/Bài thực hành số 2/System Interface Design.asta</location>
 		</link>
+		<link>
+			<name>Report/Lab03/BÁO CÁO BÀI THỰC HÀNH SỐ 3.docx</name>
+			<type>1</type>
+			<location>C:/Users/Admin/OneDrive/Máy tính/710808-IT4490-20211-ChieuT3-Chan/Bài thực hành số 3/BÁO CÁO BÀI THỰC HÀNH SỐ 3.docx</location>
+		</link>
+		<link>
+			<name>Report/Lab03/System Interface Design.asta</name>
+			<type>1</type>
+			<location>C:/Users/Admin/OneDrive/Máy tính/710808-IT4490-20211-ChieuT3-Chan/Bài thực hành số 2/System Interface Design.asta</location>
+		</link>
 	</linkedResources>
 </projectDescription>
